// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can render 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<a
  class="typography-linkReset-1 typography-chevron-link-2"
  data-id="chevron-link"
  href=""
  padding="none"
>
  <div
    class="c0"
    style="margin-left: -8px; margin-top: 0px; margin-bottom: 0px; height: 24px;"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-3"
      data-id="IconChevronRight"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span>
    Chevron link
  </span>
</a>
`;

exports[`It can render another tone 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<a
  class="typography-linkReset-4 typography-chevron-link-5"
  data-id="chevron-link"
  href=""
  padding="none"
>
  <div
    class="c0"
    style="margin-left: -8px; margin-top: 0px; margin-bottom: 0px; height: 24px;"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-6"
      data-id="IconChevronRight"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span>
    Chevron link
  </span>
</a>
`;
